Hice algunos cambios

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="menu/menu.html" class="menu-links">Menu</a>
                 </li>
                 <li class="menu-item">
-                    <a href="" class="menu-links">Carta de restaurante</a>
+                    <a href="menu/cartaDelRestaurante.html" class="menu-links">Carta de restaurante</a>
                 </li>
             </ul>
             <i class="bxr  bx-moon-star" id="modoOscuro"></i>
@@ -78,9 +78,9 @@
                 <p>📷Instagram: <a href="https://www.instagram.com/lasdeliciasdeflores.ok/?utm_source=ig_web_button_share_sheet">@lasdeliciasdeflores.ok</a></p>
             </li>
         </ul>
-        <h4>¿Tenes hambre? No esperes más</h4>
-        <button>
-            <a href="menu/cartaDelRestaurante.html">Ver carta completa</a>
+        <h4 class="motivacion">¿Tenes hambre? No esperes más</h4>
+        <button id="cartaCompletaBtn">
+            <a href="menu/cartaDelRestaurante.html" class="cartaCompleta">Ver carta completa</a>
         </button>
     </footer>
     <script src="js/script.js"></script>
