--- a/menu/menu.html
+++ b/menu/menu.html
@@ -29,5 +29,22 @@
             <i class="bxr  bx-moon-star" id="modoOscuro"></i>
         </nav>
     </header>
+    <aside>
+        <ul class="menuMilanesa">
+            <li class="milanesas">
+                milanesas 
+                <ul class="milanesaContainer">
+                    <li class="milanesa milanesa1">
+                        <a href="">Milanesa a la fugazza con papa y huevo</a>
+                    </li>
+                    <li class="milanesa milanesa2">
+                        <a href="">Milanesa a la caprese con papa y huevo</a>
+                    </li>
+                    <li class="milanesa milanesa3"></li>
+                </ul>
+            </li>
+           
+        </ul>
+    </aside>
 </body>
 </html>
