--- a/menu/cartaDelRestaurante.html
+++ b/menu/cartaDelRestaurante.html
@@ -5,25 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Las Delicias de Flores </title>
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
-    <link href='https://cdn.boxicons.com/fonts/brands/boxicons-brands.min.css' rel='stylesheet'
+    <link href='https://cdn.boxicons.com/fonts/brands/boxicons-brands.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-        <header>
-        <img src="img/lodoLDF.png" alt="Las delicias de flores" id="logo">
+    <header>
+        <button id="menuHamburguesa"><i class="bxr  bx-menu-wide"></i></button>
+        <div class="logoContainer">
+            <img src="../img/lodoLDF.png" alt="Las delicias de flores" id="logo">
+        </div>
         <nav id="menu">
             <ul class="menu-items">
                 <li class="menu-item">
-                    <a href="" class="menu-links">Inicio</a>
+                    <a href="../index.html" class="menu-links">Inicio</a>
                 </li>
                 <li class="menu-item">
-                    <a href="" class="menu-links">Menu</a>
+                    <a href="../menu/menu.html" class="menu-links">Menu</a>
                 </li>
                 <li class="menu-item">
-                    <a href="" class="menu-links">Carta de restaurante</a>
+                    <a href="cartaDelRestaurante.html" class="menu-links">Carta de restaurante</a>
                 </li>
             </ul>
+            <i class="bxr  bx-moon-star" id="modoOscuro"></i>
         </nav>
-        <p><i class="bxr  bx-moon-star"></i></p>
     </header>
 </body>
 </html>
