Empeze a maquetar el menu

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -40,11 +40,17 @@
                     <li class="milanesa milanesa2">
                         <a href="">Milanesa a la caprese con papa y huevo</a>
                     </li>
-                    <li class="milanesa milanesa3"></li>
+                    <li class="milanesa milanesa3">Milanesa a la napolitanda con papa y huevo</li>
                 </ul>
             </li>
-           
         </ul>
     </aside>
+    <main>
+        <h1 id="titulo">Menu del dia</h1>
+        <div id="milanesaAlaFugazza">
+            <img src="../img/milanesaALaFugazza.jpg" alt="Milanesa a la fugazza" class="milanesaAlaFugazza">
+            <h2>Milanesa a la fugazza con papa y huevo</h2>
+        </div>
+    </main>
 </body>
 </html>
